--- a/main.css
+++ b/main.css
@@ -15,5 +15,5 @@ img{
     left: 50%;
     /* bring your own prefixes */
     transform: translate(-50%, -50%);
-    min-height: 150px;
+    min-height: 30vh;
 }
